# syn-helpers

./: Cargo.toml  README.md
.github/workflows/: crates.yml  rust.yml
src/: custom_structures.rs  derive.rs  fields.rs  fields_and_structures.rs  generic_helpers.rs  lib.rs  lists_and_arguments.rs  model.rs  structure.rs  visit_fields.rs
tests/: examples.rs  structures.rs  test.rs
