[package]
name = "syn-helpers"
description = "Framework for building derive macros"
license = "MIT"
repository = "https://github.com/kaleidawave/syn-helpers"
authors = ["Ben <kaleidawave@gmail.com>"]
categories = [
    "development-tools::procedural-macro-helpers",
    "development-tools::build-utils",
]
version = "0.4.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.10"
syn = { version = "1.0.81", features = ["full", "visit", "visit-mut"] }
either_n = "0.2.0"

[features]
syn-extra-traits = ["syn/extra-traits"]
field_is_type = ["syn-extra-traits"]
