[package]
name = "syn-helpers"
description = "Framework for building derive macros"
license = "MIT"
repository = "https://github.com/kaleidawave/syn-helpers"
authors = ["Ben <kaleidawave@gmail.com>"]
keywords = ["proc-macro-derive", "syn", "code-generation", "enum"]
categories = [
    "development-tools::procedural-macro-helpers",
    "development-tools::build-utils",
]
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
either_n = "0.2"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"

[features]
syn-extra-traits = ["syn/extra-traits"]
field_is_type = ["syn-extra-traits"]
